Version 1alpha1 - released 2012-07-22
cmb	added plugin icon

Version 1dev2 - internally released 2012-03-17
cmb	added filesize info to download button
cmb	added warning if download file is not readable

Version 1dev1 - internally released 2012-01-08
cmb	initial release