@@ -1,0 +1,23 @@
+<?php
+
+$plugin_tx['dlcounter']['menu_main']="Statistics";
+
+$plugin_tx['dlcounter']['syscheck_title']="System check";
+$plugin_tx['dlcounter']['syscheck_phpversion']="PHP version &ge; %s";
+$plugin_tx['dlcounter']['syscheck_extension']="Extension '%s' loaded";
+$plugin_tx['dlcounter']['syscheck_encoding']="Encoding 'UTF-8' configured";
+$plugin_tx['dlcounter']['syscheck_magic_quotes']="magic_quotes_runtime off";
+$plugin_tx['dlcounter']['syscheck_jquery']="<a href=\"http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple\">jQuery4CMSimple plugin</a> installed";
+$plugin_tx['dlcounter']['syscheck_writable']="Folder '%s' writable";
+
+$plugin_tx['dlcounter']['label_totals']="Totals";
+$plugin_tx['dlcounter']['label_individual']="Individual Downloads";
+$plugin_tx['dlcounter']['label_date']="Date";
+$plugin_tx['dlcounter']['label_file']="File";
+$plugin_tx['dlcounter']['label_count']="Count";
+$plugin_tx['dlcounter']['label_download']="Download";
+
+$plugin_tx['dlcounter']['cf_folder_data']="Path to a folder relative to the CMSimple root directory, where to store the plugin's data, e.g. \"userfiles/dlcounter/\". Leave empty to store in the plugin's data/ folder.";
+$plugin_tx['dlcounter']['cf_folder_downloads']="Path to a folder relative to the CMSimple root directory, where the downloadable files are stored, e.g. \"userfiles/downloads/\".";
+
+?>
